[5590] Fix for too small privileges popup (#5591)
Fixed by increasing the bootstrap width of medium wide modals

Issue: https://github.com/geonetwork/core-geonetwork/issues/5590

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_editor_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_editor_default.less
@@ -85,12 +85,6 @@
       overflow: auto;
     }
   }
-  // modal dialog (wider for for multilingual)
-  @media (min-width: @screen-sm-min) {
-    .modal-dialog {
-      width: 760px;
-    }
-  }
   form.gn-editor {
     // tabs above editor
     .nav {
